--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "classnames": "^2.3.1",
     "clsx": "^1.0.4",
     "codemirror": "^5.58.1",
+    "country-list": "^2.3.0",
     "date-fns": "^2.22.1",
     "dwv": "^0.28.2",
     "file-saver": "^2.0.5",
