--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
         "args": "after-used",
         "ignoreRestSiblings": false
       }
-    ]
+    ],
+    "react-hooks/exhaustive-deps": "warn",
   }
 }
