--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,4 @@
 {
-  "plugins": [
-    "react-hooks"
-  ],
   "rules": {
     "no-unused-vars": [
       "warn",
@@ -12,5 +9,13 @@
       }
     ],
     "react-hooks/exhaustive-deps": "warn"
+  },
+  "env": {
+    "CI": {
+      "rules": {
+        "no-unused-vars": "off",
+        "react-hooks/exhaustive-deps": "off"
+      }
+    }
   }
 }
