--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
     "node": {
       "rules": {
         "no-unused-vars": "off",
-        "react-hooks/exhaustive-deps": "off"
+        "react-hooks/exhaustive-deps": "off",
+        "*": "off"
       }
     }
   }
