--- a/.github/workflows/file.yml
+++ b/.github/workflows/file.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Build React App
         run: |
-          npm run build
+          CI=false npm run build
 
       - name: Copy build files to target path
         run: |
