--- a/package.json
+++ b/package.json
@@ -158,7 +158,7 @@
     "@babel/preset-env": "7.5.5"
   },
   "scripts": {
-    "start": "react-scripts  --openssl-legacy-provider start --port=3900",
+    "start": "cross-env PORT=3900 react-scripts  --openssl-legacy-provider start",
     "build": "react-scripts --max_old_space_size=8048 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -175,6 +175,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "cross-env": "^7.0.3",
     "eslint-plugin-react-hooks": "^4.6.0"
   },
   "plugins": [
