--- a/.github/workflows/file.yml
+++ b/.github/workflows/file.yml
@@ -35,7 +35,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm install --legacy-peer-deps   
+          npm install --legacy-peer-deps
+          npm audit fix --force
       
 
       - name: Build React App
