--- a/package.json
+++ b/package.json
@@ -158,8 +158,8 @@
     "@babel/preset-env": "7.5.5"
   },
   "scripts": {
-    "start": "cross-env PORT=3900 react-scripts export NODE_OPTIONS=--openssl-legacy-provider start",
-    "build": "react-scripts --max_old_space_size=8048 export NODE_OPTIONS=--openssl-legacy-provider build",
+    "start": "cross-env PORT=3900 react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --max_old_space_size=8048 --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
