--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "react-to-pdf": "^0.0.14",
     "react-to-print": "^2.14.1",
     "react-toastify": "^7.0.2",
+    "react-webcam": "^7.0.1",
     "reactjs-popup": "^2.0.4",
     "reactstrap": "^8.6.0",
     "redux": "^4.0.5",
